<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/applogo"
        android:layout_width="93dp"
        android:layout_height="85dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/community_logo" />

    <ImageView
        android:id="@+id/apptitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/app_logo_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/community_title" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="422dp"
        android:layout_height="117dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="0dp"
        android:layout_marginTop="732dp"
        android:backgroundTint="#06287C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="BottomAppBar" />

    <ImageButton
        android:id="@+id/homelogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="748dp"
        android:contentDescription="@string/home_logo"
        android:backgroundTint="@color/dark_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home" />

    <TextView
        android:id="@+id/hometitle"
        android:layout_width="85dp"
        android:layout_height="22dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="796dp"
        android:text="@string/home_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/profilelogo"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="748dp"
        android:backgroundTint="@color/dark_blue"
        android:contentDescription="@string/profile_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/profiletitle"
        android:layout_width="93dp"
        android:layout_height="23dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="796dp"
        android:text="@string/profile_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/settingslogo"
        android:layout_width="64dp"
        android:layout_height="47dp"
        android:layout_marginStart="348dp"
        android:layout_marginTop="748dp"
        android:backgroundTint="@color/dark_blue"
        android:contentDescription="@string/settings_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings" />

    <TextView
        android:id="@+id/settingstitle"
        android:layout_width="87dp"
        android:layout_height="28dp"
        android:layout_marginStart="332dp"
        android:layout_marginTop="796dp"
        android:text="@string/settings_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/announcementslogo"
        android:layout_width="150dp"
        android:layout_height="159dp"
        app:srcCompat="@drawable/announcements"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="104dp" />

    <TextView
        android:id="@+id/announcementstitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Announcements/Forums"
        android:textAlignment="center"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="267dp" />

    <ImageButton
        android:id="@+id/foodlogo"
        android:layout_width="152dp"
        android:layout_height="163dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/food"
        tools:layout_editor_absoluteY="104dp" />

    <TextView
        android:id="@+id/foodtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Community Food Market"
        android:textAlignment="center"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="228dp"
        tools:layout_editor_absoluteY="267dp" />

    <ImageButton
        android:id="@+id/reportlogo"
        android:layout_width="142dp"
        android:layout_height="148dp"
        app:srcCompat="@drawable/emergency"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="309dp" />

    <TextView
        android:id="@+id/reporttitle"
        android:layout_width="140dp"
        android:layout_height="23dp"
        android:text="Emergency Report"
        android:textAlignment="center"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="457dp" />

    <ImageButton
        android:id="@+id/graphlogo"
        android:layout_width="153dp"
        android:layout_height="146dp"
        app:srcCompat="@drawable/graph"
        tools:layout_editor_absoluteX="230dp"
        tools:layout_editor_absoluteY="309dp" />

    <TextView
        android:id="@+id/graphtitle"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:text="Interactive Graph"
        android:textAlignment="center"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="233dp"
        tools:layout_editor_absoluteY="457dp" />

    <ImageButton
        android:id="@+id/calendarlogo"
        android:layout_width="145dp"
        android:layout_height="138dp"
        app:srcCompat="@drawable/calendar"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="498dp" />

    <TextView
        android:id="@+id/calendartitle"
        android:layout_width="145dp"
        android:layout_height="22dp"
        android:text="Event Calendar"
        android:textAlignment="center"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="636dp" />

    <ImageButton
        android:id="@+id/transportlogo"
        android:layout_width="150dp"
        android:layout_height="142dp"
        app:srcCompat="@drawable/transport"
        tools:layout_editor_absoluteX="233dp"
        tools:layout_editor_absoluteY="498dp" />

    <TextView
        android:id="@+id/transporttitle"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:text="Public Transport"
        android:textAlignment="center"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="233dp"
        tools:layout_editor_absoluteY="640dp" />

</androidx.constraintlayout.widget.ConstraintLayout>